fix #1335 - missing color variables usage in `alert` and `btn-ghost-*`

--- a/src/scss/ui/_alerts.scss
+++ b/src/scss/ui/_alerts.scss
@@ -32,9 +32,9 @@
   }
 }
 
-@each $state, $value in $theme-colors {
-  .alert-#{$state} {
-    --#{$prefix}alert-color: #{$value};
+@each $name, $color in $theme-colors {
+  .alert-#{$name} {
+    --#{$prefix}alert-color: var(--#{$prefix}#{$name});
   }
 }
 
